# csc-l0

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/csc/: __init__.py  get_path_matrix.pyx  sparse_coding.py  utils.py
