[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools>=42",  # https://github.com/deepcharles/ruptures/pull/100#discussion_r553700339
    "wheel",
    "Cython>=0.28.5",
    "oldest-supported-numpy",  # https://github.com/scipy/oldest-supported-numpy
    "scipy>=0.19.1",
]
build-backend = "setuptools.build_meta"