[metadata]
name = csc
version = 0.1
author = Charles Truong
author_email = charles@doffy.net
maintainer = Charles Truong
description = Convolutional sparse coding for time series
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =
    einops
    joblib
    loadmydata
    numexpr
    numpy
    ruptures
    scikit-learn
    scipy
    wfdb
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov

[build_ext]
inplace=1